# CurlImpersonate

./: .gitignore  CurlImpersonate.slnx  Directory.Build.props  LICENSE  README.md  RELEASING.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ci.yml  native-tests.yml
benchmarks/: README.md
benchmarks/CurlImpersonate.Http.Benchmarks/: BenchmarkConfig.cs  BenchmarkServerProcess.cs  ConcurrencyBenchmarks.cs  ConnectionReuseBenchmarks.cs  CurlImpersonate.Http.Benchmarks.csproj  GetRequestBenchmarks.cs  HandlerLifecycleBenchmarks.cs  PostRequestBenchmarks.cs  TlsHandshakeBenchmarks.cs
benchmarks/CurlImpersonate.Http.Benchmarks.Server/: CurlImpersonate.Http.Benchmarks.Server.csproj  Program.cs
docs/: httpclienthandler-migration.md
native/: CMakeLists.txt  native-assets.json  shim.c  shim.exp  shim.h  shim.map
native/scripts/: build_shim.py  fetch_dependencies.py  fix_macos_rpath.sh  globalize_symbols.py
native/tests/: conftest.py  minicurl.c  requirements.txt  targets.yaml  test_chrome_fingerprint.c  test_impersonate.py
src/CurlImpersonate/: CurlException.cs  CurlGlobal.cs  CurlImpersonate.csproj  ModuleInitializer.cs
src/CurlImpersonate.Http/: BrowserHeaderPolicy.cs  CurlDebugEvent.cs  CurlDebugInfoType.cs  CurlDiagnostics.cs  CurlException.cs  CurlFingerprintOptions.cs  CurlHandler.cs  CurlHandlerOptions.cs  CurlImpersonate.Http.csproj  CurlProxyAuth.cs  CurlRequestOptions.cs  CurlResponseMetadata.cs  CurlTransferMetrics.cs
src/CurlImpersonate.Http.DependencyInjection/: CurlImpersonate.Http.DependencyInjection.csproj  CurlImpersonateHttpClientBuilderExtensions.cs
src/CurlImpersonate.Http/Internal/: CurlEasyWrapper.cs  CurlEventLoop.cs  CurlHandlePool.cs  CurlNativeErrors.cs  CurlRequestBody.cs  CurlResponseHeaders.cs  CurlStreamingResponseState.cs  CurlStreamingResponseStream.cs  HeaderValidation.cs  RequestMapper.cs  ResponseBuffer.cs  ResponseBuilder.cs
src/CurlImpersonate/Enums/: BrowserProfile.cs  CurlCode.cs  CurlInfo.cs  CurlMultiCode.cs  CurlMultiOption.cs  CurlOption.cs  CurlSslOption.cs
src/CurlImpersonate/Native/: Callbacks.cs  NativeLibraryResolver.cs  NativeMethods.Easy.cs  NativeMethods.Multi.cs  NativeMethods.Slist.cs  NativeMethods.cs
src/CurlImpersonate/Native/SafeHandles/: SafeCurlEasyHandle.cs  SafeCurlHandle.cs  SafeCurlMultiHandle.cs  SafeCurlSlistHandle.cs
src/CurlImpersonate/Structs/: CurlSlist.cs
tests/CurlImpersonate.Http.Tests/: BufferLimitTests.cs  CertificateTrustTests.cs  ConnectionLimitTests.cs  CookieTests.cs  CurlDebugTests.cs  CurlDiagnosticsTests.cs  CurlHandlerOptionsSnapshotTests.cs  CurlHandlerOptionsValidationTests.cs  CurlHandlerTests.cs  CurlImpersonate.Http.Tests.csproj  CurlLifecycleTests.cs  CurlStreamingResponseStateTests.cs  DependencyInjectionTests.cs  FingerprintOptionTests.cs  HandlerParityOptionTests.cs  HeaderPolicyTests.cs  HttpVersionPolicyTests.cs  MethodBodyTests.cs  ProxyTests.cs  RedirectMetadataTests.cs  RegressionTests.cs  RequestProfileOverrideTests.cs  RequestUriTests.cs  ResponseBufferTests.cs  ResponseBuilderTests.cs  ResponseStreamingTests.cs
tests/CurlImpersonate.Tests/: BrowserProfileTests.cs  CurlEasyTests.cs  CurlGlobalTests.cs  CurlImpersonate.Tests.csproj  FingerprintTests.cs  HttpTests.cs  MinimalTest.cs  NoCurlTest.cs
tests/TestConsole/: Program.cs  TestConsole.csproj
tools/: inspect_native_dependencies.py  inspect_native_exports.py  package_smoke_test.py  validate_benchmark_results.py  validate_release_readiness.py  write_native_file_manifest.py
